[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cargame"
version = "1.0.0"
description = "Terminal Car Racing Game"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
car-game = "cargame.runner:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cargame"]

[tool.setuptools.package-data]
cargame = ["bin/*"]
